fixed gaps

--- a/src/styles/equippedWeaponsInventory/equippedWeaponsInventoryContainer.module.scss
+++ b/src/styles/equippedWeaponsInventory/equippedWeaponsInventoryContainer.module.scss
@@ -1,7 +1,7 @@
 @use '../../constants/scss/theme';
 
 .EquippedWeaponsInventoryContainer {
-  width: 16.94%;
+  flex-grow: 1;
   height: 100%;
   box-sizing: border-box;
 
